[package]
name = "chromium-base64-rs"
version = "0.1.0"
edition = "2021"

description = "Pure rust implementation of chromium's btoa and atob"
documentation = "https://docs.rs/chromium-base64-rs"
readme = "README.md"
homepage = "https://github.com/ivanhrabcak/chromium-base64-rs"
repository = "https://github.com/ivanhrabcak/chromium-base64-rs"
license = "MIT"
keywords = ["chromium", "base64"]
categories = ["encoding"]